Make into simple party site

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   web:
     volumes:
-      - .:/home/app/wedding
+      - .:/home/app/party
       - web_bundle:/usr/local/bundle
     env_file:
       - development.env
