--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: wedding_development
+  database: party_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,7 +59,7 @@ test:
   <<: *default
   username: postgres
   host: db
-  database: wedding_test
+  database: party_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: wedding_production
-  username: wedding
-  password: <%= ENV['WEDDING_DATABASE_PASSWORD'] %>
+  database: party_production
+  username: party
+  password: <%= ENV['PARTY_DATABASE_PASSWORD'] %>
