--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,12 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: db
+  username: postgres
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
   <<: *default
@@ -83,5 +86,4 @@ test:
 production:
   <<: *default
   database: party_production
-  username: party
   password: <%= ENV['PARTY_DATABASE_PASSWORD'] %>
